hphp/test/zend/bad/errmsg_044.php
<?php

$a[0] = new stdclass;
$a[0][0] = new stdclass;

?>